// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditButtonGroup Component matches snapshot when editing 1`] = `
<div>
  <div
    class="MuiBox-root css-gj66ts"
  >
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary css-1b34cgk-MuiButtonBase-root-MuiButton-root"
      tabindex="0"
      type="button"
    >
      Complete Edit
    </button>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary css-kx3slk-MuiButtonBase-root-MuiButton-root"
      tabindex="0"
      type="button"
    >
      Cancel
    </button>
  </div>
</div>
`;

exports[`EditButtonGroup Component matches snapshot when not editing 1`] = `
<div>
  <div
    class="MuiBox-root css-gj66ts"
  >
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary css-1nkrjv-MuiButtonBase-root-MuiButton-root"
      tabindex="0"
      type="button"
    >
      Edit
    </button>
  </div>
</div>
`;
